--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h2:hover{
     margin-top: 30px;
     margin-left: 50px;
     margin-right: 50px;
-   
+   font-weight: 500;
     padding: 20px;
     word-spacing: 10px;
     letter-spacing: 10px;
