--- a/about.css
+++ b/about.css
@@ -20,12 +20,17 @@ li{
     margin: 30px;
     font-weight: 500;
     font-size: 25px;
+
 }
 
 ul{
     margin-top: 60px;
   margin-left: 40%;
 
+}
+
+ a{
+    color:blueviolet;
 }
 
 section {
