--- a/dash.css
+++ b/dash.css
@@ -64,9 +64,11 @@ span{
 
 .img2{
     margin: 30px;
+    
 }
 .img2 img{
     border-radius: 20px;
+    border: 8px solid black;
     
 }
 
@@ -84,7 +86,8 @@ span{
 .exp{
     
   
-margin-top: 50px;
+margin-top: 30px;
+
 
 }
 .text2 p{
@@ -103,6 +106,7 @@ margin-top: 50px;
 .img3{
 
     margin:30px;
+
      
 }
 
@@ -142,3 +146,54 @@ margin-top: 50px;
 html{
     scroll-behavior: smooth;
 }
+
+.youtube{
+    display: flex;
+}
+
+.img4{
+    margin: 30px;
+}
+
+.text4{
+    margin: 30px;
+}
+
+.text4 h2{
+    font-size: 50px;
+
+}
+
+
+.text4 p{
+    height:fit-content;
+    width: fit-content;
+    background-color:black;
+    padding: 20px;
+    border-radius: 8px;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    color:white;
+    border: 4px solid burlywood;
+    display: inline-block;
+
+}
+
+.prime{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.exp:hover{
+   color: aquamarine;
+}
+
+.back{
+    text-align: center;
+    margin-top: 30px;
+}
+
+
+
